<resources>
    <string name="app_name">BMIProgram</string>
    <string name="heights">身長</string>
    <string name="weights">体重</string>
    <string name="men">男性</string>
    <string name="women">女性</string>
    <string name="choiceMessage">性別を選択してください。</string>
    <string name="heights_message">身長を入力して下さい。</string>
    <string name="weights_message">体重を入力して下さい。</string>
    <string name="button_send">BMI測定</string>
    <string name="calcBmi">結果表示画面</string>
</resources>
