<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4374D9">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="@dimen/_15dp"
            android:textColor="#ffffff"
            android:text="@string/choiceMessage"
            />

        <RadioGroup
            android:id="@+id/choiceSex"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="#ffffff"
                    android:text="@string/men"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/women"/>

        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/heights"/>

        <EditText android:id="@+id/heights_message"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|numberDecimal"
            android:hint="@string/heights_message" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/weights"/>

        <EditText android:id="@+id/weights_message"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/weights_message"
            android:inputType="text|numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calcButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/button_send"
            android:onClick=""
            android:background="#4374D9"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Viewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20dp"
        android:textAlignment="center"
        android:text="@string/calcBmi"/>

</LinearLayout>
